k8s/jcrypt-freqtrade-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freqtrade-service
  namespace: jcrypt
spec:
  selector:
    app: freqtrade
  ports:
  - protocol: TCP
    port: 8080
