k8s/jcrypt-freqtrade-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: freqtrade-ingress-route
  namespace: jcrypt
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`freqtrade.homelinux.com`)
      kind: Rule
      services:
        - name: freqtrade-service
          port: 5000
  # Use the secret generated by cert-manager
  tls:
    secretName: secret-freqtrade.homelinux.com
